# yapic.json

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .pdm-python  .travis.yml  DEVELOPMENT.md  LICENSE  MANIFEST  MANIFEST.in  README.rst  Vagrantfile  build_ext.py  pyproject.toml  release.py  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: release-linux.yml  release-macos.yml  release-windows.yml  test.yml
benchmark/: benchmark.py  builtins.data.json  conftest.py  json-data-generator.js  large-data.json  run-sanic.py  run.py  sanic.py
scripts/: gen_ascii_cache.py  gen_inline_jump.py  gen_str_encode_state.py  gen_str_state.py  gen_ten_powers.py
src/: __init__.py  _decoder.h  _encode_str_smid.h  _encoder.h  _encoder_str.h  _json.h  _json.pyi  buffer.h  chunk-buffer.h  config.h  decoder.h  dict_generator.h  encoder.h  error.h  globals.h  homogene_list.h  json.cpp  json.h  ms_stdint.h  number-parser.h  pystring.h  sse.h  str_decode_table.h  str_encode_ascii.h  str_encode_jump.h  str_encode_state.h  str_encode_table.h  util.h
tests/: conftest.py  test_const.py  test_d.py  test_dataclass.py  test_datetime.py  test_decimal.py  test_default.py  test_dict.py  test_enum.py  test_error.py  test_file.py  test_float.py  test_homogene_list.py  test_iterable.py  test_json_method.py  test_list.py  test_long.py  test_string.py  test_tuple.py
